[package]
name = "swipe-categorization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dialoguer = "0.10.4"
futures = "0.3.28"
mkdirp = "1.0.0"
path-absolutize = "3.1.0"
